--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
 
     <div class="computer">
         <div class="featureContent">
-            <div class="hidden1">
-                <h2>Five reasons<br>why</h2>
+            <div class="fiveReason">
+                <img src="images/fiveReasons.svg" alt="">
+            </div>
+            <div class="featureContentText hidden1">
+                <h2>Reasons<br>&nbsp;&nbsp;&nbsp; why</h2>
                 <h1>MixCuss</h1>
             </div>
         </div>
