--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
 <body>
     <div class="computer">
         <nav>
-            <img src="images/logoWithName.png" class="logo">
+            <a href="index.html">
+                <img src="images/logoWithName.png" class="logo">
+            </a>
             <div>
                 <a href="https://play.google.com/store/apps/details?id=com.udyam.mixcuss" class="downloadApp btn"
                     target="_blank">Install App</a>
