--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
     </div>
 
     <div class="mobile">
+        <div class="featureSeparator"></div>
+    </div>
+
+    <div class="mobile">
         <div class="featureContent">
             <div class="fiveReason">
                 <img src="images/fiveReasons.svg" alt="">
@@ -124,6 +128,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="mobile">
+        <div class="featureSeparator"></div>
     </div>
 
     <div class="mobile">
