--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         </div>
     </div>
 
+    <div class="computer">
+        <div class="featureSeparator"></div>
+    </div>
+
     <div class="mobile">
         <div class="featureSeparator"></div>
     </div>
