--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="downloadApp">
-                <a window.location.href = "https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.udyam.mixcuss&pli=1" class="btn"
+                <a href = "https://play.google.com/store/apps/details?id=com.udyam.mixcuss" class="btn"
                     target="_blank">
                     <img src="images/playStore.png" alt="" class="playStoreImage">
                 </a>
