--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <script defer src="scriptMobile.js"></script>
     <title>MixCuss: About</title>
 </head>
+
 <body>
     <div class="computer">
         <nav>
@@ -54,22 +56,37 @@
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
             <a onclick="closeSidebar()" href="legal.html">Legal</a>
             <a onclick="closeSidebar()" href="contact.html">Contact</a>
-          </div>
+        </div>
     </div>
 
     <!-- Main content starts from here -->
 
     <div class="privacyPolicyWrapper">
         <div class="privacyPolicyHeader">
-            <h1>About MixCuss</h1>
+            <h1>About Us</h1>
             <br>
             <br>
             <br>
         </div>
+
+        <div class="information">
+            In the ever-evolving world of technology, we believe in the possibility of presenting digital communication
+            in a way that adapts to our diverse world. Our best efforts are dedicated to making your digital life more
+            secure and private. With MixCuss, you can interact freely with anyone from anywhere. Now, interaction is
+            more entertaining than ever.
+        </div>
     </div>
 
     <div class="footer">
-        <h3>Copyright reserved<br>Contact us</h3>
+        <h3>Copyright reserved</h3>
+        <div class="computer">
+            <br>
+            <h3>Contact us</h3>
+            <br>
+            <br>
+            <h4>mixcuss@gmail.com</h4>
+        </div>
     </div>
 </body>
+
 </html>
