--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,19 @@
             to us at <a href= "mailto: privacy.mixcuss@gmail.com">privacy.mixcuss@gmail.com</a>.
         </div>
     </div>
+
+    <div class="featureSeparator"></div>
+    
+    <div class="footer">
+        <h3>Copyright reserved</h3>
+        <div class="computer">
+            <br>
+            <h3>Contact us</h3>
+            <br>
+            <br>
+            <h4>mixcuss@gmail.com</h4>
+        </div>
+    </div>
 </body>
 
 </html>
