--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <h1> do not store </h1>
                 <h2>mobile numbers in the</h2>
                 <h1> user details.</h1>
-                <h2>So, no one can access your</h2>
+                <h2>No user can access your</h2>
                 <h1> contact number.</h1>
             </div>
             <div class="reasonKey reasonKey1 hidden4">
@@ -185,7 +185,7 @@
                 <h1> do not store </h1>
                 <h2>mobile numbers in the</h2>
                 <h1> user details.</h1>
-                <h2>So, no one can access your</h2>
+                <h2>No user can access your</h2>
                 <h1> contact number.</h1>
             </div>
             <div class="reasonKey reasonKey1">
@@ -377,7 +377,14 @@
     </div>
 
     <div class="footer">
-        <h3>Copyright reserved<br>Contact us</h3>
+        <h3>Copyright reserved</h3>
+        <div class="computer">
+            <br>
+            <h3>Contact us</h3>
+            <br>
+            <br>
+            <h4>mixcuss@gmail.com</h4>
+        </div>
     </div>
 </body>
 
