--- a/legal.html
+++ b/legal.html
@@ -85,8 +85,16 @@
     </div>
 
     <div class="featureSeparator"></div>
+
     <div class="footer">
-        <h3>Copyright reserved<br>Contact us</h3>
+        <h3>Copyright reserved</h3>
+        <div class="computer">
+            <br>
+            <h3>Contact us</h3>
+            <br>
+            <br>
+            <h4>mixcuss@gmail.com</h4>
+        </div>
     </div>
 </body>
 
