Updated to show screenshots

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                 <h1 class="initialAnimation2">Now interaction is more<br>entertaining than ever</h1>
                 <p class="initialAnimation2">Make new memories with<br>new people every day</p>
             </div>
+            <div class="screenShotsContainer">
+                <img src="images/screenShot1.png" class="screenShots screenShot1">
+                <img src="images/screenShot2.png" class="screenShots screenShot2">
+                <img src="images/screenShot3.png" class="screenShots screenShot3">
+                <img src="images/screenShot4.png" class="screenShots screenShot4">
+                <img src="images/screenShot5.png" class="screenShots screenShot5">
+            </div>
         </div>
     </div>
 
@@ -168,7 +175,7 @@
                 <h2>We</h2>
                 <h1> do not store </h1>
                 <h2>mobile numbers in the</h2>
-                <h1> user details.</h1>
+                <h1> user details. </h1>
                 <h2>No user can access your</h2>
                 <h1> contact number.</h1>
             </div>
@@ -184,7 +191,7 @@
                 <h2>We</h2>
                 <h1> do not store </h1>
                 <h2>mobile numbers in the</h2>
-                <h1> user details.</h1>
+                <h1> user details. </h1>
                 <h2>No user can access your</h2>
                 <h1> contact number.</h1>
             </div>
