--- a/index.html
+++ b/index.html
@@ -67,11 +67,20 @@
                 <p class="initialAnimation2">Make new memories with<br>new people every day</p>
             </div>
             <div class="screenShotsContainer">
-                <img src="images/screenShot1.png" class="screenShots screenShot1">
-                <img src="images/screenShot2.png" class="screenShots screenShot2">
-                <img src="images/screenShot3.png" class="screenShots screenShot3">
-                <img src="images/screenShot4.png" class="screenShots screenShot4">
-                <img src="images/screenShot5.png" class="screenShots screenShot5">
+                <img src="images/screenShot1.png" class="screenShots screenShot1" id="screenShot1">
+                <img src="images/screenShot2.png" class="screenShots screenShot2" id="screenShot2">
+                <img src="images/screenShot3.png" class="screenShots screenShot3" id="screenShot3">
+                <img src="images/screenShot4.png" class="screenShots screenShot4" id="screenShot4">
+                <img src="images/screenShot5.png" class="screenShots screenShot5" id="screenShot5">
+            </div>
+            <div class="screenShotsNavigatorContainer">
+                <div class="screenShotsNavigator">
+                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab1" onclick="screenShotsNavigatorTab(1)"></div>
+                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab2" onclick="screenShotsNavigatorTab(2)"></div>
+                    <div class="screenShotsNavigatorTab selected" id="screenShotsNavigatorTab3" onclick="screenShotsNavigatorTab(3)"></div>
+                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab4" onclick="screenShotsNavigatorTab(4)"></div>
+                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab5" onclick="screenShotsNavigatorTab(5)"></div>
+                </div>
             </div>
         </div>
     </div>
