--- a/faqs.html
+++ b/faqs.html
@@ -60,7 +60,6 @@
     </div>
 
     <!-- Main content starts from here -->
-
     <div class="privacyPolicyWrapper">
         <div class="privacyPolicyHeader">
             <div class="computer">
@@ -68,103 +67,63 @@
                 <br>
                 <br>
                 <br>
-                <h1>About</h1>
+                <h1>FAQs</h1>
                 <br>
             </div>
-            <div class="mobile"><h1>About Us</h1></div>
+            <div class="mobile"><h1>FAQs</h1></div>
             <br>
             <br>
             <br>
         </div>
+
+        <div class="level3">
+            Q. How to pronounce the name MixCuss?
+        </div>
+        <div class="qaSeparator"></div>
         <div class="information">
-            In the last decades push messaging or instant messaging developed rapidly on mobile devices. 
-            In recent times, the availability of affordable high-speed mobile data and smart devices has 
-            kept this market at a boiling point. Analyzing various aspects of existing platforms we shaped 
-            our idea in the form MixCuss. MixCuss is a Google Maps based instant messaging app that 
-            enables users to interact without sharing contact numbers.
+            A. MixCuss should be pronounced like 'discuss'.
         </div>
         <br>
         <br>
 
-        <div class="level1">
-            Our Philosophy
+        <div class="level3">
+            Q. Is MixCuss available on both Apple devices and Android devices?
         </div>
-
+        <div class="qaSeparator"></div>
         <div class="information">
-            In the ever-evolving world of technology, we strongly believe in the possibility of presenting digital communication
-            in a way that adapts to our diverse world. Our best efforts are dedicated to making your digital life more
-            secure and private. With MixCuss, you can interact freely with anyone from anywhere. Now, interaction is
-            more entertaining than ever.
+            A. No, presently MixCuss is only available for Android devices. We will soon launch it for 
+            Apple devices as well.
         </div>
         <br>
         <br>
 
-        <div class="level1">
-            Our Motivation
+        <div class="level3">
+            Q. Is MixCuss free or paid?
         </div>
+        <div class="qaSeparator"></div>
         <div class="information">
-            Studies indicate that the social networking market exhibits a significant gender disparity 
-            across all age groups, which starkly contrasts with the country’s overall sex ratio. This 
-            highlights a lack of confidence in existing platforms. Through our analysis, we identified 
-            privacy concerns as a key factor contributing to this disparity. Throughout the development 
-            process, our priority has always been user privacy. Such an approach, which aims to integrate 
-            enhanced user engagement with privacy, brought many challenges to the table. We believe 
-            digital technology should not restrict people from exploration due to privacy fears. Rather, 
-            it should add an extra dimension to their freedom.
+            A. Currently, only the free version is available on the Google Play Store.
         </div>
         <br>
         <br>
 
-        <div class="level1">
-            Our Objective
+        <div class="level3">
+            Q. Does MixCuss contains ads?
         </div>
+        <div class="qaSeparator"></div>
         <div class="information">
-            We had a clear vision for our goals from the outset. Our aim is to provide a platform that 
-            excels in the following aspects. We are dedicated to achieving our objectives while 
-            maintaining high standards. Additionally, we remain steadfast in our commitment to our 
-            Privacy Policy and the law of the land.
+            A. Instant messaging apps require a messaging server to function properly. In the free version, 
+            we use ads to cover the costs and generate revenue.
         </div>
         <br>
-        <div class="level3">Privacy</div>
-        <div class="information">
-            Our utmost priority and concern is privacy. To fulfill this commitment, we have introduced 
-            several distinguished features. On our platform, users' contact information is not accessible 
-            and cannot be shared without their knowledge. We have also introduced 'Z Connect' along 
-            with QR codes, allowing users to share contact information even through other platforms.
-        </div>
         <br>
 
-        
-        <div class="level3">Accessibility</div>
-        <div class="information">
-            Following our philosophy and the motivation outlined above, we designed our user interface 
-            and features to enhance users' ability to discover others without compromising privacy. On 
-            our platform, the integrated Google Maps feature allows users to explore and connect beyond 
-            their contact lists. In this way, everyone becomes your neighbor.
+        <div class="level3">
+            Q. Is MixCuss available globally?
         </div>
-        <br>
-
-        <div class="level3">Freedom of Choice</div>
+        <div class="qaSeparator"></div>
         <div class="information">
-            We have thoughtfully chosen an approach that stands in stark contrast to current trends. 
-            When it comes to the question of choice, we avoid intervening. To uphold this principle, 
-            we refrain from using artificial intelligence or any computer algorithms to offer curated 
-            friend suggestions for our benefit. We strongly believe that users should have the maximum 
-            possible freedom to make their own choices.
-        </div>
-        <br>
-
-        <div class="level3">Transparency</div>
-        <div class="information">
-            We are dedicated to maintaining transparency in our revenue model and the usage of user 
-            information.
-        </div>
-        <br>
-
-        <div class="level3">Comfort</div>
-        <div class="information">
-            We aimed to create a platform that welcomes people with diverse perspectives across age, gender, 
-            and demographics, ensuring everyone can interact with each other comfortably.
+            A. No, presently MixCuss is only available in India.
         </div>
     </div>
 
@@ -205,16 +164,16 @@
             <div class="subFooter" style="width: auto;">
                 <h3>Quick Links</Link></h3>
                 <br>
-                <h4>About</h4>
+                <h4><a href="about.html">About</a></h4>
                 <br>
                 <h4><a href="ourStory.html">Our Story</a></h4>
                 <br>
                 <h4><a href="news.html">News</a></h4>
                 <br>
-                <h4><a href="faqs.html">FAQs</a></h4>
+                <h4>FAQs</h4>
             </div>
         </div>
     </div>
+    
 </body>
-
 </html>
