--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <script defer src="scriptMobile.js"></script>
-    <title>MixCuss: Legal</title>
+    <title>MixCuss: About</title>
 </head>
 
 <body>
@@ -51,36 +51,33 @@
 
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
-            <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="#">About</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
-            <a onclick="closeSidebar()" href="#">Legal</a>
+            <a onclick="closeSidebar()" href="legal.html">Legal</a>
             <a onclick="closeSidebar()" href="contact.html">Contact</a>
-          </div>
+        </div>
     </div>
 
     <!-- Main content starts from here -->
 
     <div class="privacyPolicyWrapper">
         <div class="privacyPolicyHeader">
-            <h1>Legal Information</h1>
-            <br><br><br>
-        </div>
-
-        <div class="section">
-            <div class="textContent">
-                Welcome to MixCuss! Please review our legal information to understand the terms and conditions governing
-                your use of our website and services.
-                <br><br>
-                By accessing and using MixCuss, you agree to be bound by our <a href="termsOfUse.html">Terms of Use</a>.
-                <br><br>
-                We are committed to providing a safe and positive experience for all users. Please read our <a
-                    href="acceptableUsagePolicy.html">Acceptable Usage Policy</a> to understand the guidelines for using
-                our platform responsibly.
-                <br><br>
-                Your privacy is important to us. Our <a href="privacyPolicy.html">Privacy Policy</a> explains how we
-                collect, use, and protect your personal information.
+            <div class="computer">
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1>News</h1>
+                <br>
             </div>
+            <div class="mobile"><h1>News</h1></div>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="information">
+            We are always excited to share our achievements, stories with you first.
         </div>
     </div>
 
@@ -125,12 +122,12 @@
                 <br>
                 <h4><a href="ourStory.html">Our Story</a></h4>
                 <br>
-                <h4><a href="news.html">News</a></h4>
+                <h4>News</h4>
                 <br>
                 <h4><a href="faqs.html">FAQs</a></h4>
             </div>
         </div>
     </div>
+    
 </body>
-
 </html>
