--- a/ourStory.html
+++ b/ourStory.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <script defer src="scriptMobile.js"></script>
-    <title>MixCuss: Legal</title>
+    <title>MixCuss: About</title>
 </head>
 
 <body>
@@ -51,36 +51,46 @@
 
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
-            <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="#">About</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
-            <a onclick="closeSidebar()" href="#">Legal</a>
+            <a onclick="closeSidebar()" href="legal.html">Legal</a>
             <a onclick="closeSidebar()" href="contact.html">Contact</a>
-          </div>
+        </div>
     </div>
 
     <!-- Main content starts from here -->
-
     <div class="privacyPolicyWrapper">
         <div class="privacyPolicyHeader">
-            <h1>Legal Information</h1>
-            <br><br><br>
-        </div>
-
-        <div class="section">
-            <div class="textContent">
-                Welcome to MixCuss! Please review our legal information to understand the terms and conditions governing
-                your use of our website and services.
-                <br><br>
-                By accessing and using MixCuss, you agree to be bound by our <a href="termsOfUse.html">Terms of Use</a>.
-                <br><br>
-                We are committed to providing a safe and positive experience for all users. Please read our <a
-                    href="acceptableUsagePolicy.html">Acceptable Usage Policy</a> to understand the guidelines for using
-                our platform responsibly.
-                <br><br>
-                Your privacy is important to us. Our <a href="privacyPolicy.html">Privacy Policy</a> explains how we
-                collect, use, and protect your personal information.
+            <div class="computer">
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1>Our Story</h1>
+                <br>
             </div>
+            <div class="mobile"><h1>Our Story</h1></div>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="information">
+            We appreciate your longing for an exciting story and are dedicated to creating an extraordinary 
+            success story to share with you. Our commitment drives us to push boundaries, innovate continuously, 
+            and overcome challenges, ensuring that the journey we craft is both inspiring and remarkable. 
+            So far our short journey began with three friends before couple of years. Fortunately, we had 
+            the opportunity to witness the rapid development of push messaging on mobile devices from its 
+            outset over the last decade and have closely examined its various aspects.
+        </div>
+        <img src="images/sudarshan.png" alt="" class="foundarAvatar">
+        <div class="information foundersNote">
+            It all started with me, Sudarshan Saha. Academically, I am a theoretical physicist, and as an 
+            enthusiastic student, I had the opportunity to learn programming during my doctoral coursework. 
+            I must mention Dr. Arun Kumar Nayak, then an assistant professor at the Institute of Physics, 
+            Bhubaneswar, for teaching Object-Oriented Programming so well during the coursework. After an 
+            initial discussion with two friends, we started working from scratch. My programming knowledge 
+            helped me overcome various challenges and turn our imagination into reality.
         </div>
     </div>
 
@@ -123,7 +133,7 @@
                 <br>
                 <h4><a href="about.html">About</a></h4>
                 <br>
-                <h4><a href="ourStory.html">Our Story</a></h4>
+                <h4>Our Story</h4>
                 <br>
                 <h4><a href="news.html">News</a></h4>
                 <br>
@@ -131,6 +141,6 @@
             </div>
         </div>
     </div>
+    
 </body>
-
 </html>
