--- a/termsOfUse.html
+++ b/termsOfUse.html
@@ -966,16 +966,51 @@
         </div>
     </div>
 
-    <div class="featureSeparator"></div>
+    <div class="computer footerSeparator"></div>
 
     <div class="footer">
-        <h3>Copyright reserved</h3>
+        <div class="mobile">
+            <h3>Copyright reserved</h3>
+        </div>
         <div class="computer">
-            <br>
-            <h3>Contact us</h3>
-            <br>
-            <br>
-            <h4>mixcuss@gmail.com</h4>
+            <div class="subFooter" style="width: 65vw;">
+                <img src="images/logoWithName.png" class="logo">
+                <br>
+                <br>
+                <br>
+                <h3>Contact Us</h3>
+                <br>
+                <h4>
+                    Email: <a href="mailto:mixcuss@gmail.com">mixcuss@gmail.com</a>
+                </h4>
+                <br>
+                <br>
+                <h3>Follow Us</h3>
+                <br>
+                <img src="images/linkedinLogo.png" class="footerLogo" id="linkedInLogo">
+                <img src="images/facebookLogo.png" class="footerLogo" id="facebookLogo">
+                <img src="images/instagramLogo.png" class="footerLogo" id="instagramLogo">
+                <img src="images/youtubeLogo.png" class="footerLogo" id="youtubeLogo">
+                <img src="images/xLogo.png" class="footerLogo" id="xLogo">
+                <br>
+                <br>
+                <br>
+                <h4>
+                    &copy; MixCuss. All Rights Reserved.
+                </h4>
+            </div>
+
+            <div class="subFooter" style="width: auto;">
+                <h3>Quick Links</Link></h3>
+                <br>
+                <h4><a href="about.html">About</a></h4>
+                <br>
+                <h4><a href="ourStory.html">Our Story</a></h4>
+                <br>
+                <h4><a href="news.html">News</a></h4>
+                <br>
+                <h4><a href="faqs.html">FAQs</a></h4>
+            </div>
         </div>
     </div>
 </body>
