Minor CSS update

--- a/ourStory.html
+++ b/ourStory.html
@@ -76,7 +76,7 @@
             <br>
         </div>
         <div class="information">
-            We appreciate your longing for an exciting story and are dedicated to creating an extraordinary 
+            We appreciate your longing for an exciting story and we are dedicated to creating an extraordinary 
             success story to share with you. Our commitment drives us to push boundaries, innovate continuously, 
             and overcome challenges, ensuring that the journey we craft is both inspiring and remarkable. 
             So far our short journey began with three friends before couple of years. Fortunately, we had 
@@ -85,7 +85,7 @@
         </div>
         <img src="images/sudarshan.png" alt="" class="foundarAvatar">
         <div class="information foundersNote">
-            It all started with me, Sudarshan Saha. Academically, I am a theoretical physicist, and as an 
+            It all started with me. I am Sudarshan Saha. Academically, I am a theoretical physicist, and as an 
             enthusiastic student, I had the opportunity to learn programming during my doctoral coursework. 
             I must mention Dr. Arun Kumar Nayak, then an assistant professor at the Institute of Physics, 
             Bhubaneswar, for teaching Object-Oriented Programming so well during the coursework. After an 
