--- a/ourStory.html
+++ b/ourStory.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <script defer src="scriptMobile.js"></script>
-    <title>MixCuss: About</title>
+    <title>MixCuss: Our Story</title>
 </head>
 
 <body>
