Styling in About page updated

--- a/ourStory.html
+++ b/ourStory.html
@@ -83,8 +83,9 @@
             the opportunity to witness the rapid development of push messaging on mobile devices from its 
             outset over the last decade and have closely examined its various aspects.
         </div>
+        <br>
         <img src="images/sudarshan.png" alt="" class="foundarAvatar">
-        <div class="information foundersNote">
+        <div class="avatarSideText founderNote">
             It all started with me. I am Sudarshan Saha. Academically, I am a theoretical physicist, and as an 
             enthusiastic student, I had the opportunity to learn programming during my doctoral coursework. 
             I must mention Dr. Arun Kumar Nayak, then an assistant professor at the Institute of Physics, 
