--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://mixcuss.com/">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleMobile.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
@@ -396,8 +397,32 @@
 
     <div class="footer">
         <div class="mobile">
-            <h3>Copyright reserved</h3>
+            <img src="images/logoWithName.png" class="logo">
+                <br>
+                <br>
+                <br>
+                <h3>Contact Us</h3>
+                <br>
+                <h4>
+                    Email: <a href="mailto:mixcuss@gmail.com">mixcuss@gmail.com</a>
+                </h4>
+                <br>
+                <br>
+                <h3>Follow Us</h3>
+                <br>
+                <img src="images/linkedinLogo.png" class="footerLogo" id="linkedInLogo">
+                <img src="images/facebookLogo.png" class="footerLogo" id="facebookLogo">
+                <img src="images/instagramLogo.png" class="footerLogo" id="instagramLogo">
+                <img src="images/youtubeLogo.png" class="footerLogo" id="youtubeLogo">
+                <img src="images/xLogo.png" class="footerLogo" id="xLogo">
+                <br>
+                <br>
+                <br>
+                <h4>
+                    &copy; MixCuss. All Rights Reserved.
+                </h4>
         </div>
+
         <div class="computer">
             <div class="subFooter" style="width: 65vw;">
                 <img src="images/logoWithName.png" class="logo">
@@ -416,7 +441,9 @@
                 <img src="images/linkedinLogo.png" class="footerLogo" id="linkedInLogo">
                 <img src="images/facebookLogo.png" class="footerLogo" id="facebookLogo">
                 <img src="images/instagramLogo.png" class="footerLogo" id="instagramLogo">
-                <img src="images/youtubeLogo.png" class="footerLogo" id="youtubeLogo">
+                <a href="http://www.youtube.com/@MixCuss" target="_blank">
+                    <img src="images/youtubeLogo.png" class="footerLogo" id="youtubeLogo">
+                </a>
                 <img src="images/xLogo.png" class="footerLogo" id="xLogo">
                 <br>
                 <br>
