Bug in the footer fixed

--- a/about.html
+++ b/about.html
@@ -174,11 +174,14 @@
 
     <div class="computer footerSeparator"></div>
 
-    <div class="footer">
-        <div class="mobile">
+    <div class="mobile">
+        <div class="footer">
             <h3>Copyright reserved</h3>
         </div>
-        <div class="computer">
+    </div>
+
+    <div class="computer">
+        <div class="footer">
             <div class="subFooter" style="width: 65vw;">
                 <img src="images/logoWithName.png" class="logo">
                 <br>
@@ -205,7 +208,7 @@
                     &copy; MixCuss. All Rights Reserved.
                 </h4>
             </div>
-
+    
             <div class="subFooter" style="width: auto;">
                 <h3>Quick Links</Link></h3>
                 <br>
