--- a/index.html
+++ b/index.html
@@ -393,10 +393,12 @@
         <div class="featureSeparator"></div>
     </div>
 
-    <div class="computer footerSeparator"></div>
+    <div class="computer">
+        <div class="footerSeparator"></div>
+    </div>
 
-    <div class="footer">
-        <div class="mobile">
+    <div class="mobile">
+        <div class="footer">
             <img src="images/logoWithName.png" class="logo">
                 <br>
                 <br>
@@ -422,8 +424,10 @@
                     &copy; MixCuss. All Rights Reserved.
                 </h4>
         </div>
+    </div>
 
-        <div class="computer">
+    <div class="computer">
+        <div class="footer">
             <div class="subFooter" style="width: 65vw;">
                 <img src="images/logoWithName.png" class="logo">
                 <br>
@@ -452,7 +456,7 @@
                     &copy; MixCuss. All Rights Reserved.
                 </h4>
             </div>
-
+    
             <div class="subFooter" style="width: auto;">
                 <h3>Quick Links</Link></h3>
                 <br>
