--- a/news.html
+++ b/news.html
@@ -83,11 +83,14 @@
 
     <div class="computer footerSeparator"></div>
 
-    <div class="footer">
-        <div class="mobile">
+    <div class="mobile">
+        <div class="footer">
             <h3>Copyright reserved</h3>
         </div>
-        <div class="computer">
+    </div>
+
+    <div class="computer">
+        <div class="footer">
             <div class="subFooter" style="width: 65vw;">
                 <img src="images/logoWithName.png" class="logo">
                 <br>
