--- a/acceptableUsagePolicy.html
+++ b/acceptableUsagePolicy.html
@@ -171,11 +171,15 @@
 
     <div class="computer footerSeparator"></div>
 
-    <div class="footer">
-        <div class="mobile">
+    <div class="mobile">
+        <div class="footer">
             <h3>Copyright reserved</h3>
         </div>
-        <div class="computer">
+        
+    </div>
+
+    <div class="computer">
+        <div class="foother">
             <div class="subFooter" style="width: 65vw;">
                 <img src="images/logoWithName.png" class="logo">
                 <br>
