--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -887,11 +887,14 @@
 
     <div class="computer footerSeparator"></div>
 
-    <div class="footer">
-        <div class="mobile">
+    <div class="mobile">
+        <div class="footer">
             <h3>Copyright reserved</h3>
         </div>
-        <div class="computer">
+    </div>
+
+    <div class="computer">
+        <div class="footer">
             <div class="subFooter" style="width: 65vw;">
                 <img src="images/logoWithName.png" class="logo">
                 <br>
@@ -924,7 +927,7 @@
                 <br>
                 <h4><a href="about.html">About</a></h4>
                 <br>
-                <h4><a href="ourStory.html">Our Story</a></h4>
+                <h4>Our Story</h4>
                 <br>
                 <h4><a href="news.html">News</a></h4>
                 <br>
@@ -932,6 +935,7 @@
             </div>
         </div>
     </div>
+    
 </body>
 
 </html>
