--- a/about.html
+++ b/about.html
@@ -176,7 +176,30 @@
 
     <div class="mobile">
         <div class="footer">
-            <h3>Copyright reserved</h3>
+            <img src="images/logoWithName.png" class="logo">
+                <br>
+                <br>
+                <br>
+                <h3>Contact Us</h3>
+                <br>
+                <h4>
+                    Email: <a href="mailto:mixcuss@gmail.com">mixcuss@gmail.com</a>
+                </h4>
+                <br>
+                <br>
+                <h3>Follow Us</h3>
+                <br>
+                <img src="images/linkedinLogo.png" class="footerLogo" id="linkedInLogo">
+                <img src="images/facebookLogo.png" class="footerLogo" id="facebookLogo">
+                <img src="images/instagramLogo.png" class="footerLogo" id="instagramLogo">
+                <img src="images/youtubeLogo.png" class="footerLogo" id="youtubeLogo">
+                <img src="images/xLogo.png" class="footerLogo" id="xLogo">
+                <br>
+                <br>
+                <br>
+                <h4>
+                    &copy; MixCuss. All Rights Reserved.
+                </h4>
         </div>
     </div>
 
