--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                 <h1>About</h1>
                 <br>
             </div>
-            <div class="mobile"><h1>About Us</h1></div>
+            <div class="mobile"><h1>About</h1></div>
             <br>
             <br>
             <br>
