Screenshots animation updated

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </div>
 
     <!-- Main content starts from here -->
+    <div id="isScreenShotAnimating">false</div>
 
     <div class="computer">
         <div class="headerContent">
@@ -68,20 +69,11 @@
                 <p class="initialAnimation2">Make new memories with<br>new people every day</p>
             </div>
             <div class="screenShotsContainer">
-                <img src="images/screenShot1.png" class="screenShots screenShot1" id="screenShot1">
-                <img src="images/screenShot2.png" class="screenShots screenShot2" id="screenShot2">
-                <img src="images/screenShot3.png" class="screenShots screenShot3" id="screenShot3">
-                <img src="images/screenShot4.png" class="screenShots screenShot4" id="screenShot4">
-                <img src="images/screenShot5.png" class="screenShots screenShot5" id="screenShot5">
-            </div>
-            <div class="screenShotsNavigatorContainer">
-                <div class="screenShotsNavigator">
-                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab1" onclick="screenShotsNavigatorTab(1)"></div>
-                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab2" onclick="screenShotsNavigatorTab(2)"></div>
-                    <div class="screenShotsNavigatorTab selected" id="screenShotsNavigatorTab3" onclick="screenShotsNavigatorTab(3)"></div>
-                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab4" onclick="screenShotsNavigatorTab(4)"></div>
-                    <div class="screenShotsNavigatorTab" id="screenShotsNavigatorTab5" onclick="screenShotsNavigatorTab(5)"></div>
-                </div>
+                <img src="images/screenShot1.png" class="screenShots screenShot1" id="screenShot1" onclick="screenShotsNavigator(1)">
+                <img src="images/screenShot2.png" class="screenShots screenShot2" id="screenShot2" onclick="screenShotsNavigator(2)">
+                <img src="images/screenShot3.png" class="screenShots screenShot3 selected" id="screenShot3" onclick="screenShotsNavigator(3)">
+                <img src="images/screenShot4.png" class="screenShots screenShot4" id="screenShot4" onclick="screenShotsNavigator(4)">
+                <img src="images/screenShot5.png" class="screenShots screenShot5" id="screenShot5" onclick="screenShotsNavigator(5)">
             </div>
         </div>
     </div>
