Updated for contach page

--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -23,7 +23,8 @@
                     target="_blank">Install App</a>
             </div>
             <ul>
-                <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+                <li><a href="contach.html"><img src="images/contachWithName.png" alt="Contach" class="contachLogo"></a></li>
+                <li><a href="">Privacy Policy</a></li>
                 <li><a href="termsOfUse.html">Terms of Use</a></li>
                 <li><a href="legal.html">Legal</a></li>
             </ul>
