--- a/termsOfUse.html
+++ b/termsOfUse.html
@@ -23,8 +23,9 @@
                     target="_blank">Install App</a>
             </div>
             <ul>
+                <li><a href="contach.html"><img src="images/contachWithName.png" alt="Contach" class="contachLogo"></a></li>
                 <li><a href="privacyPolicy.html">Privacy Policy</a></li>
-                <li><a href="termsOfUse.html">Terms of Use</a></li>
+                <li><a href="">Terms of Use</a></li>
                 <li><a href="legal.html">Legal</a></li>
             </ul>
         </nav>
