--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     target="_blank">Install App</a>
             </div>
             <ul>
+                <li><a href="contach.html"><img src="images/contachWithName.png" alt="Contach" class="contachLogo"></a></li>
                 <li><a href="privacyPolicy.html">Privacy Policy</a></li>
                 <li><a href="termsOfUse.html">Terms of Use</a></li>
                 <li><a href="legal.html">Legal</a></li>
@@ -51,6 +52,7 @@
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
             <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="contach.html">Contach</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
             <a onclick="closeSidebar()" href="legal.html">Legal</a>
