Update for contach page for mobile devices

--- a/acceptableUsagePolicy.html
+++ b/acceptableUsagePolicy.html
@@ -53,6 +53,7 @@
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
             <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="contach.html">Contach</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
             <a onclick="closeSidebar()" href="legal.html">Legal</a>
