--- a/contach.html
+++ b/contach.html
@@ -23,7 +23,7 @@
                     target="_blank">Install App</a>
             </div>
             <ul>
-                <li><a href=""><img src="images/contachWithName.png" alt="Contach" class="contachLogo"></a></li>
+                <li><a href="#"><img src="images/contachWithName.png" alt="Contach" class="contachLogo"></a></li>
                 <li><a href="privacyPolicy.html">Privacy Policy</a></li>
                 <li><a href="termsOfUse.html">Terms of Use</a></li>
                 <li><a href="legal.html">Legal</a></li>
@@ -52,7 +52,8 @@
 
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
-            <a onclick="closeSidebar()" href="#">About</a>
+            <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="#">Contach</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
             <a onclick="closeSidebar()" href="legal.html">Legal</a>
@@ -72,7 +73,7 @@
                 <h1>Contach</h1>
                 <br>
             </div>
-            <div class="mobile"><h1>About</h1></div>
+            <div class="mobile"><h1>Contach</h1></div>
             <br>
             <br>
             <br>
