--- a/legal.html
+++ b/legal.html
@@ -26,7 +26,7 @@
                 <li><a href="contach.html"><img src="images/contachWithName.png" alt="Contach" class="contachLogo"></a></li>
                 <li><a href="privacyPolicy.html">Privacy Policy</a></li>
                 <li><a href="termsOfUse.html">Terms of Use</a></li>
-                <li><a href="">Legal</a></li>
+                <li><a href="#">Legal</a></li>
             </ul>
         </nav>
     </div>
@@ -53,6 +53,7 @@
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
             <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="contach.html">Contach</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
             <a onclick="closeSidebar()" href="#">Legal</a>
