--- a/termsOfUse.html
+++ b/termsOfUse.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="contach.html"><img src="images/contachWithName.png" alt="Contach" class="contachLogo"></a></li>
                 <li><a href="privacyPolicy.html">Privacy Policy</a></li>
-                <li><a href="">Terms of Use</a></li>
+                <li><a href="#">Terms of Use</a></li>
                 <li><a href="legal.html">Legal</a></li>
             </ul>
         </nav>
@@ -53,6 +53,7 @@
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
             <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="contach.html">Contach</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="#">Terms of Use</a>
             <a onclick="closeSidebar()" href="legal.html">Legal</a>
