--- a/contach.html
+++ b/contach.html
@@ -70,7 +70,7 @@
                 <br>
                 <br>
                 <br>
-                <h1>Contach</h1>
+                <h1 style="display: inline-flex; align-items: center; gap: 1vw;"><img src="images/contachLogo.png" width="50vw" alt="">Contach</h1>
                 <br>
             </div>
             <div class="mobile"><h1>Contach</h1></div>
@@ -209,7 +209,7 @@
             <div class="subFooter" style="width: auto;">
                 <h3>Quick Links</Link></h3>
                 <br>
-                <h4>About</h4>
+                <h4><a href="about.html">About</a></h4>
                 <br>
                 <h4><a href="ourStory.html">Our Story</a></h4>
                 <br>
