Updated for the email outreach drive

--- a/contach.html
+++ b/contach.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <script defer src="scriptMobile.js"></script>
-    <title>MixCuss: About</title>
+    <title>MixCuss: Contach</title>
 </head>
 
 <body>
@@ -115,17 +115,22 @@
             </div>
 
             <div class="avatarSideText aboutAvatarText">
-                Using Contach is very simple. To connect with your client, for example, you only 
-                need three simple details: First name, Last name, and their Contach code. Every 
-                MixCuss user gets a six-character Contach code upon signing in and you can find it 
-                in the Contach screen. Once you have these details, you create a Contach Request. 
-                Now your client can connect with you in two ways: <br>
-                    - By entering your first name, last name, and Contach code. <br>
+                Using Contach is very simple. To connect with someone, say your client for example, 
+                it requires only two steps. First you create a Contach Request with three simple 
+                details: First name, Last name, and Contach code of the person you want to connect 
+                with. Every MixCuss user gets a six-character Contach code upon signing in and you 
+                can find it in the Contach screen. Once created, your client can connect with you 
+                in two convenient ways: <br>
+                    - By using your first name, last name, and Contach code. <br>
                     - Or simply by scanning the QR code generated with your request. <br> <br>
                 Isn't it simple and smart?
             </div>
         </div>
+    </div>    
+
+    <img class="computer" src="images/contachDemoForWebsite.png" style="width:94%;margin-left: 5%;" alt="">
         
+    <div class="privacyPolicyWrapper">
         <div class="descriptionSectionWrapper">
             <div class="textAvatar">
                 Other Features
@@ -141,7 +146,8 @@
                 business lead, or someone important you just met. Since each Contach Request is, 
                 exclusively valid between you and the recipient, your privacy remains intact - even 
                 if it is shared or seen by others. Contach also provides options, to connect with 
-                groups safely and effortlessly.
+                groups safely and effortlessly with unique options designed for practical, 
+                real-world scenarios.
             </div>
         </div>
     </div>
@@ -191,6 +197,7 @@
                 </h4>
                 <br>
                 <br>
+                <!--
                 <h3>Follow Us</h3>
                 <br>
                 <img src="images/linkedinLogo.png" class="footerLogo" id="linkedInLogo">
@@ -198,6 +205,7 @@
                 <img src="images/instagramLogo.png" class="footerLogo" id="instagramLogo">
                 <img src="images/youtubeLogo.png" class="footerLogo" id="youtubeLogo">
                 <img src="images/xLogo.png" class="footerLogo" id="xLogo">
+                -->
                 <br>
                 <br>
                 <br>
