Removed Our Story from the footer

--- a/acceptableUsagePolicy.html
+++ b/acceptableUsagePolicy.html
@@ -236,10 +236,12 @@
             <div class="subFooter" style="width: auto;">
                 <h3>Quick Links</Link></h3>
                 <br>
-                <h4>About</h4>
+                <h4><a href="about.html">About</a></h4>
                 <br>
+                <!--
                 <h4><a href="ourStory.html">Our Story</a></h4>
                 <br>
+                -->
                 <h4><a href="news.html">News</a></h4>
                 <br>
                 <h4><a href="faqs.html">FAQs</a></h4>
